--- a/docs/UML/classes/decision_logic_module.adoc
+++ b/docs/UML/classes/decision_logic_module.adoc
@@ -9,15 +9,8 @@ h|*Description*
 2+a|Specialised kind of class that represents a Decision Logic Module (DLM).
 
 h|*Inherit*
-2+|`link:/releases/RM/{rm_release}/common.html#_authored_resource_class[AUTHORED_RESOURCE^]`, `link:/releases/LANG/{lang_release}/bmm.html#_bmm_simple_class_class[BMM_SIMPLE_CLASS^]`
+2+|`link:/releases/BASE/{base_release}/resource.html#_authored_resource_class[AUTHORED_RESOURCE^]`, `link:/releases/LANG/{lang_release}/bmm.html#_bmm_simple_class_class[BMM_SIMPLE_CLASS^]`
 
-h|*Attributes*
-^h|*Signature*
-^h|*Meaning*
-
-h|*0..1*
-|*definitions*: `link:/releases/BASE/{base_release}/foundation_types.html#_list_class[List^]<link:/releases/LANG/{lang_release}/bmm.html#_bmm_constant_class[BMM_CONSTANT^]>`
-a|Constant definitions needed by module.
 h|*Functions*
 ^h|*Signature*
 ^h|*Meaning*
