--- a/docs/UML/classes/dlm_input_section.adoc
+++ b/docs/UML/classes/dlm_input_section.adoc
@@ -24,5 +24,5 @@ a|Name of this feature group; defaults to 'input'.
 h|*0..1 +
 (redefined)*
 |*features*: `link:/releases/BASE/{base_release}/foundation_types.html#_list_class[List^]<link:/releases/LANG/{lang_release}/bmm.html#_bmm_constant_class[BMM_CONSTANT^]>`
-a|Set of features in this group.
+a|Input variable proxies.
 |===
