--- a/docs/UML/classes/dlm_preconditions_section.adoc
+++ b/docs/UML/classes/dlm_preconditions_section.adoc
@@ -24,5 +24,5 @@ a|Name of this feature group; defaults to 'feature'.
 h|*0..1 +
 (redefined)*
 |*features*: `link:/releases/LANG/{lang_release}/bmm.html#_bmm_function_class[BMM_FUNCTION^]`
-a|Set of features in this group.
+a|Precondition expressed as functions.
 |===
