--- a/docs/UML/classes/dlm_rules_section.adoc
+++ b/docs/UML/classes/dlm_rules_section.adoc
@@ -24,5 +24,5 @@ a|Name of this feature group; defaults to 'rules'.
 h|*0..1 +
 (redefined)*
 |*features*: `link:/releases/BASE/{base_release}/foundation_types.html#_list_class[List^]<<<_dlm_rule_class,DLM_RULE>>>`
-a|Set of features in this group.
+a|Rules for this module.
 |===
