--- a/docs/process_examples/master07-cancer_prescribing.adoc
+++ b/docs/process_examples/master07-cancer_prescribing.adoc
@@ -41,20 +41,20 @@ input -- Tracked State
 
     ki67: Quantity
         currency = 60 days
-        ranges =
-            -------------------
-            [high]:   |>= 14%|,
-            [normal]: |< 14%|
-            -------------------
+        ranges["%"] =
+            ------------------
+            |≥ 14|:   [high],
+            |< 14|:   [normal]
+            ------------------
         ;
 
     ejection_fraction: Quantity
         currency = 60 days
-        ranges =
-            --------------------
-            [normal]:  |>= 40%|,
-            [low]  :   |< 40%|
-            --------------------
+        ranges["%"] =
+            -------------------
+            |≥ 40|:   [normal],
+            |< 40|:   [low]
+            -------------------
         ;
                 
 rules -- Conditions
@@ -138,7 +138,7 @@ rules -- Output
                         (tnm_t > '1a' or tnm_n > '0'):                   [taxanes],
                         ------------------------------------------------------------------------
                         molecular_subtype = [luminal_A] and 
-                        (tnm_t >= '3' or tnm_n >= '2' or tnm_g >= '3'):  [anthracyclines],
+                        (tnm_t ≥ '3' or tnm_n ≥ '2' or tnm_g ≥ '3'):  [anthracyclines],
                         ------------------------------------------------------------------------
                         molecular_subtype = [luminal_B_HER2_positive] and 
                         (tnm_t = '1b' or tnm_t = '1c' and tnm_n = '0') or
