Further updates to convert variable declaration range tables to Case table expressions.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -23,9 +23,7 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/decision_language.html#_dlm_rules_section_class[DLM_RULES_SECTION^]
 [.xcode]
-* link:/releases/PROC/{proc_release}/decision_language.html#_range_def_class[RANGE_DEF^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/decision_language.html#_range_group_class[RANGE_GROUP^]
+* link:/releases/PROC/{proc_release}/decision_language.html#_state_variable_class[STATE_VARIABLE^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/decision_language.html#_tracked_quantitative_variable_class[TRACKED_QUANTITATIVE_VARIABLE^]
 [.xcode]
@@ -215,8 +213,6 @@
 * link:/releases/PROC/{proc_release}/task_planning.html#_review_dataset_spec_class[REVIEW_DATASET_SPEC^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_state_trigger_class[STATE_TRIGGER^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/task_planning.html#_state_variable_class[STATE_VARIABLE^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_subject_precondition_class[SUBJECT_PRECONDITION^]
 [.xcode]
