--- a/docs/UML/classes/state_variable.adoc
+++ b/docs/UML/classes/state_variable.adoc
@@ -3,19 +3,37 @@
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*STATE_VARIABLE<TT>*
+2+^h|*STATE_VARIABLE<T>*
 
 h|*Description*
-2+a|Variable that is updated by polling, and is regarded as correct as long as the last update occurred at or more recently than the required currency.
+2+a|Abstraction of a real-world variable that represents a quality of a subject, e.g. patient diabetic status, date of birth etc.
 
-h|*Inherit*
-2+|`<<_external_variable_class,EXTERNAL_VARIABLE>>`
+The generic parameter is a model type from an accessible model.
 
 h|*Attributes*
 ^h|*Signature*
 ^h|*Meaning*
 
 h|*0..1*
-|*required_currency*: `link:/releases/BASE/{base_release}/foundation_types.html#_iso8601_duration_class[Iso8601_duration^]`
-a|Required currency of data in target system (e.g. EHR) to be considered valid in the context of this Task.
+|*history*: `link:/releases/BASE/{base_release}/foundation_types.html#_hash_class[Hash^]<link:/releases/BASE/{base_release}/foundation_types.html#_string_class[String^],<<_value_snapshot_class,VALUE_SNAPSHOT>>>`
+a|Local history of values.
+
+h|*1..1*
+|*name*: `link:/releases/BASE/{base_release}/foundation_types.html#_string_class[String^]`
+a|Name of variable.
+h|*Functions*
+^h|*Signature*
+^h|*Meaning*
+
+h|*1..1*
+|*is_available* (): `link:/releases/BASE/{base_release}/foundation_types.html#_boolean_class[Boolean^]`
+a|Return True if there is a value in `_history_`.
+
+h|*0..1*
+|*unavailable_reason* (): `link:/releases/BASE/{base_release}/foundation_types.html#_string_class[String^]`
+a|If `_is_available_` is False, potentially provide a reason.
+
+h|*0..1*
+|*value* (): `T`
+a|Retrieve latest value, or null if none.
 |===
