--- a/docs/tp_vml/master00-amendment_record.adoc
+++ b/docs/tp_vml/master00-amendment_record.adoc
@@ -4,7 +4,7 @@
 |===
 |Issue|Details|Raiser|Completed
 
-4+^h|*PROC Release 1.6.0 (unreleased)*
+4+^h|*PROC Release 1.6.0*
 
 |[[latest_issue]]0.6.3
 |Add Task Repeat.
